# BriocheBot

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
cmake/: FindHiredis.cmake  FindIrcclient.cmake  FindJsonCpp.cmake
data/: config.ini
data/scripts/: arnadd.lua  arndel.lua  arndeop.lua  arnop.lua  arnrestart.lua  arnstream.lua  ban.lua  brioche.lua  help.lua  log.lua  requests.lua  setskin.lua  skin.lua  stats.lua  status.lua  time.lua  to.lua  unban.lua  uptime.lua
lib/happyhttp/: happyhttp.cpp
lib/hiredis/: hiredis.h  net.c
lib/jsoncpp/: json_writer.cpp
lib/libircclient/: config.h  config.status  configure  configure.in  libircclient.c  libircclient.h  portable.c
lib/lua/: loslib.c
src/: command.cc  command.h  config.cc  config.h  curl.cc  curl.h  extra.cc  icommand_listener.h  imessage_listener.h  ini.c  ini.h  ini_reader.cc  irc_client.cc  irc_client.h  irc_manager.cc  irc_manager.h  irc_sockets.h  logger.cc  logger.h  lua_logger.cc  lua_logger.h  lua_player.cc  lua_player.h  lua_request.cc  lua_request.h  lua_server.cc  lua_server.h  lua_state.cc  lua_state.h  lua_utils.cc  lua_utils.h  lua_wrapper.h  lua_wrapper_types.h  lua_wrapper_utils.h  main.cc  osu_api.cc  osu_api.h  osu_beatmap.cc  osu_beatmap.h  osu_client.cc  (+25 more)
src/events/: emitter.h
src/ini/: reader.cc  reader.h
src/irc/: client.cc  client.h  manager.cc  manager.h  options.h  osu.cc  osu.h  parser.cc  parser.h  reply.cc  reply.h  scanner.cc  scanner.h  session.h  socket.cc  socket.h  sockets.h  twitch.cc  twitch.h
src/lua/: logger.cc  player.cc  request.cc  request.h  server.cc  state.cc  state.h  utils.cc  viewer.cc  viewer.h  wrapper.h  wrapper_utils.h
src/models/: command.cc  icommand_listener.h  imessage_listener.h  iserializable.cc  iserializable.h  moderator.cc  moderator.h  player.cc  player.h  players.cc  players.h  request.cc  request.h  streamer.cc  streamer.h  viewer.cc  viewer.h  viewers.cc  viewers.h
src/osu/: api.cc  api.h  beatmap.cc  user.cc
src/scripts/: manager.cc  manager.h  script.cc  script.h
src/server/: server.cc  server.h
src/utils/: config.cc  config.h  curl.cc  curl.h  http.cc  http.h  logger.cc  logger.h  non_copyable.h  redis.cc  redis.h  service.cc  utils.cc  utils.h
src/uv/: buffer.cc  buffer.h  dns.cc  dns.h  file.cc  file.h  files.cc  files.h  loop.cc  loop.h  socket.cc  socket.h  stream.h  timer.cc  timer.h  work.cc  work.h
vs/: BriocheBot.sln  BriocheBot.vcxproj  BriocheBot.vcxproj.filters  build.bat  clean.bat  ircbot.sln  ircbot.vcxproj  ircbot.vcxproj.filters  launch.bat
